local/local-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
  labels:
    app: splunk
  namespace: splunk-operator
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      hostname: splunk
      containers:
        - name: splunk
          image: splunk/splunk:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
            - containerPort: 8088
              name: hec
              protocol: TCP
            - containerPort: 9997
              name: indexer
              protocol: TCP
          volumeMounts:
          - mountPath: /opt/splunk/var
            name: splunk
            subPath: var
          - mountPath: /opt/splunk/etc/apps
            name: splunk
            subPath: var/splunk-apps  # Share same PVC, different subPath
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
      - name: splunk
        persistentVolumeClaim:
          claimName: splunk
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-http
  namespace: splunk-operator
  labels:
    app: splunk
spec:
  ports:
  - name: http
    port: 8000
  type: ClusterIP
  selector:
    app: splunk
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-hec
  namespace: splunk-operator
  labels:
    app: splunk
spec:
  ports:
  - name: hec
    port: 8088
  type: ClusterIP
  selector:
    app: splunk
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-indexer
  namespace: splunk-operator
  labels:
    app: splunk
spec:
  ports:
  - name: indexer
    port: 9997
  type: ClusterIP
  selector:
    app: splunk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk
  namespace: splunk-caca
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - splunk.devinslick.com
  rules:
  - host: splunk.devinslick.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-http
            port:
              number: 8000
